Revision history for {{$dist->name}}

{{$NEXT}}

2.033002  2016-10-31 16:03:23-07:00 America/Los_Angeles
 - Fix ::ProxyResultSetMethod to work when calling ->update
   (Thanks for the report Ryan Voots!)
 - Fix a number of warnings induced by upcoming DBIC (Thanks ribasushi!)

2.033001  2016-08-22 22:09:34-07:00 America/Los_Angeles
 - Fix a strictness error in a deprecated module (Thanks Niko Tyni!)

2.033000  2016-07-03 22:02:03-07:00 America/Los_Angeles
 - Add ::Schema::Verifier::ColumnInfo (Thanks Wes Malone!) (Closes GH#67)
 - Uninserted rows do not set their storage value anymore
   (Thanks for the report Wes Malone!) (Closes GH#69)

2.032002  2016-05-24 10:00:16-07:00 America/Los_Angeles
 - Fix variation in list context when using ::OnColumnMissing
   (Thanks to David Farrell for the bug report!)
   (Closes GH#63)

2.032001  2016-04-13 22:01:03-07:00 America/Los_Angeles
 - Fix simple deletion and updates for ::DateMethods1
   (Thanks for the report Wes Malone and Erland Injerd, and the help to fix the
   actual bug ribasushi!)

2.032000  2015-11-07 10:34:14-08:00 America/Los_Angeles
 - Add ::ResultClass::Tee

2.031000  2015-07-25 01:20:40-07:00 America/Los_Angeles
 - Add ::ResultSet::Bare (Closes GH#53)

2.030002  2015-07-14 13:43:47-07:00 America/Los_Angeles
 - Clarify docs for ::ResultSet::OneRow (Thanks for the tips Aran Deltac!)
   (Closes GH#48)
 - Add abstract to ::Row::JoinTable (Thanks Gregor Herrmann!)
   (Closes GH#49)

2.030001  2015-07-10 22:38:58-07:00 America/Los_Angeles
 - Make ::Schema::Verifier aggregate errors instead of dying on first one

2.030000  2015-07-01 10:11:42-07:00 America/Los_Angeles
 - Add ::Row::OnColumnMissing (Thanks ZipRecruiter!)

2.029000  2015-06-27 14:16:31-07:00 America/Los_Angeles
 - Add ::ResultSet::OneRow (Thanks Aran Deltac!)

2.028000  2015-05-30 17:06:01-05:00 America/Chicago
 - Add ::Verifier::RelationshipColumnName (Thanks for the idea mcsnolte!)