@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+ - Stop depending on String::CamelCase (closes GH#81)
 
 2.033002  2016-10-31 16:03:23-07:00 America/Los_Angeles
  - Fix ::ProxyResultSetMethod to work when calling ->update
